@@ -1,0 +1,7 @@
+.*: Assembler messages:
+.*:11: Error: .*
+.*:12: Error: .*
+.*:13: Error: .*
+.*:14: Error: .*
+.*:15: Warning: .*
+.*:16: Warning: .*
