@@ -1,3 +1,8 @@
+2005-04-18  Jan Beulich  <jbeulich@novell.com>
+
+	* gas/macros/purge.[ls]: New.
+	* gas/macros/macros.exp: Run new test.
+
 2005-04-15  Jan Beulich  <jbeulich@novell.com>
 
 	* gas/elf/struct.[sd]: New.
